# serializer version: 1
# name: TestNotebooks.test_updates_notebook
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.1
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.10
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.11
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "posthog_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "posthog_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.12
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestNotebooks.test_updates_notebook.13
  '''
  SELECT "posthog_notebook"."id",
         "posthog_notebook"."short_id",
         "posthog_notebook"."team_id",
         "posthog_notebook"."title",
         "posthog_notebook"."content",
         "posthog_notebook"."text_content",
         "posthog_notebook"."deleted",
         "posthog_notebook"."version",
         "posthog_notebook"."created_at",
         "posthog_notebook"."created_by_id",
         "posthog_notebook"."last_modified_at",
         "posthog_notebook"."last_modified_by_id",
         "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in",
         T5."id",
         T5."password",
         T5."last_login",
         T5."first_name",
         T5."last_name",
         T5."is_staff",
         T5."date_joined",
         T5."uuid",
         T5."current_organization_id",
         T5."current_team_id",
         T5."email",
         T5."pending_email",
         T5."temporary_token",
         T5."distinct_id",
         T5."is_email_verified",
         T5."requested_password_reset_at",
         T5."has_seen_product_intro_for",
         T5."strapi_id",
         T5."is_active",
         T5."role_at_organization",
         T5."theme_mode",
         T5."partial_notification_settings",
         T5."anonymize_data",
         T5."toolbar_mode",
         T5."hedgehog_config",
         T5."events_column_config",
         T5."email_opt_in"
  FROM "posthog_notebook"
  INNER JOIN "posthog_team" ON ("posthog_notebook"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_user" ON ("posthog_notebook"."created_by_id" = "posthog_user"."id")
  LEFT OUTER JOIN "posthog_user" T5 ON ("posthog_notebook"."last_modified_by_id" = T5."id")
  WHERE ("posthog_team"."project_id" = 99999
         AND "posthog_notebook"."short_id" = '00000000')
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.14
  '''
  SELECT "posthog_notebook"."id",
         "posthog_notebook"."short_id",
         "posthog_notebook"."team_id",
         "posthog_notebook"."title",
         "posthog_notebook"."content",
         "posthog_notebook"."text_content",
         "posthog_notebook"."deleted",
         "posthog_notebook"."version",
         "posthog_notebook"."created_at",
         "posthog_notebook"."created_by_id",
         "posthog_notebook"."last_modified_at",
         "posthog_notebook"."last_modified_by_id"
  FROM "posthog_notebook"
  WHERE "posthog_notebook"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.15
  '''
  SELECT "posthog_notebook"."id",
         "posthog_notebook"."short_id",
         "posthog_notebook"."team_id",
         "posthog_notebook"."title",
         "posthog_notebook"."content",
         "posthog_notebook"."text_content",
         "posthog_notebook"."deleted",
         "posthog_notebook"."version",
         "posthog_notebook"."created_at",
         "posthog_notebook"."created_by_id",
         "posthog_notebook"."last_modified_at",
         "posthog_notebook"."last_modified_by_id"
  FROM "posthog_notebook"
  WHERE "posthog_notebook"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestNotebooks.test_updates_notebook.16
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.17
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'notebook'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.18
  '''
  SELECT "posthog_filesystemshortcut"."id",
         "posthog_filesystemshortcut"."team_id",
         "posthog_filesystemshortcut"."user_id",
         "posthog_filesystemshortcut"."path",
         "posthog_filesystemshortcut"."type",
         "posthog_filesystemshortcut"."ref",
         "posthog_filesystemshortcut"."href",
         "posthog_filesystemshortcut"."created_at"
  FROM "posthog_filesystemshortcut"
  WHERE ("posthog_filesystemshortcut"."ref" = '0001'
         AND "posthog_filesystemshortcut"."team_id" = 99999
         AND "posthog_filesystemshortcut"."type" = 'notebook'
         AND NOT ("posthog_filesystemshortcut"."path" = 'New title'
                  AND "posthog_filesystemshortcut"."href" = '__skipped__'
                  AND "posthog_filesystemshortcut"."href" IS NOT NULL))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.19
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.2
  '''
  SELECT "posthog_project"."id",
         "posthog_project"."organization_id",
         "posthog_project"."name",
         "posthog_project"."created_at",
         "posthog_project"."product_description"
  FROM "posthog_project"
  WHERE "posthog_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.20
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.21
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.22
  '''
  SELECT "posthog_project"."id",
         "posthog_project"."organization_id",
         "posthog_project"."name",
         "posthog_project"."created_at",
         "posthog_project"."product_description"
  FROM "posthog_project"
  WHERE "posthog_project"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.23
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.24
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "posthog_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "posthog_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.25
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestNotebooks.test_updates_notebook.26
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."scope" = 'Notebook'
         AND "posthog_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestNotebooks.test_updates_notebook.27
  '''
  SELECT "posthog_activitylog"."id",
         "posthog_activitylog"."team_id",
         "posthog_activitylog"."organization_id",
         "posthog_activitylog"."user_id",
         "posthog_activitylog"."was_impersonated",
         "posthog_activitylog"."is_system",
         "posthog_activitylog"."activity",
         "posthog_activitylog"."item_id",
         "posthog_activitylog"."scope",
         "posthog_activitylog"."detail",
         "posthog_activitylog"."created_at",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_activitylog"
  LEFT OUTER JOIN "posthog_user" ON ("posthog_activitylog"."user_id" = "posthog_user"."id")
  WHERE ("posthog_activitylog"."scope" = 'Notebook'
         AND "posthog_activitylog"."team_id" = 99999)
  ORDER BY "posthog_activitylog"."created_at" DESC
  LIMIT 2
  '''
# ---
# name: TestNotebooks.test_updates_notebook.28
  '''
  SELECT COUNT(*) AS "__count"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."scope" = 'Notebook'
         AND "posthog_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestNotebooks.test_updates_notebook.29
  '''
  SELECT "posthog_activitylog"."id",
         "posthog_activitylog"."team_id",
         "posthog_activitylog"."organization_id",
         "posthog_activitylog"."user_id",
         "posthog_activitylog"."was_impersonated",
         "posthog_activitylog"."is_system",
         "posthog_activitylog"."activity",
         "posthog_activitylog"."item_id",
         "posthog_activitylog"."scope",
         "posthog_activitylog"."detail",
         "posthog_activitylog"."created_at",
         "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_activitylog"
  LEFT OUTER JOIN "posthog_user" ON ("posthog_activitylog"."user_id" = "posthog_user"."id")
  WHERE ("posthog_activitylog"."scope" = 'Notebook'
         AND "posthog_activitylog"."team_id" = 99999)
  ORDER BY "posthog_activitylog"."created_at" DESC
  LIMIT 2
  '''
# ---
# name: TestNotebooks.test_updates_notebook.3
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.4
  '''
  SELECT "ee_accesscontrol"."id",
         "ee_accesscontrol"."team_id",
         "ee_accesscontrol"."access_level",
         "ee_accesscontrol"."resource",
         "ee_accesscontrol"."resource_id",
         "ee_accesscontrol"."organization_member_id",
         "ee_accesscontrol"."role_id",
         "ee_accesscontrol"."created_by_id",
         "ee_accesscontrol"."created_at",
         "ee_accesscontrol"."updated_at"
  FROM "ee_accesscontrol"
  LEFT OUTER JOIN "posthog_organizationmembership" ON ("ee_accesscontrol"."organization_member_id" = "posthog_organizationmembership"."id")
  WHERE (("ee_accesscontrol"."organization_member_id" IS NULL
          AND "ee_accesscontrol"."resource" = 'project'
          AND "ee_accesscontrol"."resource_id" = '99999'
          AND "ee_accesscontrol"."role_id" IS NULL
          AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'project'
             AND "ee_accesscontrol"."resource_id" = '99999'
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("ee_accesscontrol"."organization_member_id" IS NULL
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999)
         OR ("posthog_organizationmembership"."user_id" = 99999
             AND "ee_accesscontrol"."resource" = 'notebook'
             AND "ee_accesscontrol"."resource_id" IS NOT NULL
             AND "ee_accesscontrol"."role_id" IS NULL
             AND "ee_accesscontrol"."team_id" = 99999))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.5
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestNotebooks.test_updates_notebook.6
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'notebook'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestNotebooks.test_updates_notebook.7
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.8
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestNotebooks.test_updates_notebook.9
  '''
  SELECT "posthog_project"."id",
         "posthog_project"."organization_id",
         "posthog_project"."name",
         "posthog_project"."created_at",
         "posthog_project"."product_description"
  FROM "posthog_project"
  WHERE "posthog_project"."id" = 99999
  LIMIT 21
  '''
# ---
